# amel

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  vols.glade  vols.gladep
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  function.c  function.h  interface.c  interface.c.bak  interface.h.bak  main.c  vol.txt  vols
src/.deps/: callbacks.Po  function.Po
